# scatdb

./: .gitignore  CMakeLists.txt  Doxyfile.in  INSTALL.md  LICENSE  README.md  changelog.md  dbformat.md
CMakeBase/: Doxyfile.in  cmake-settings.h.in  module-scatdb.in  scatdbConfig.cmake  scatdbConfigVersion.cmake
CMakeRules/: FindEigen3.cmake  FindHDF5.cmake  FindHDF5.cmake.old  addBaseProject.cmake  addBoostUniform.cmake  addInstallDirs.cmake  addapp.cmake  adddocs.cmake  addlib.cmake  generaterc.cmake  lib.rc.in
apps/: CMakeLists.txt  README.md
apps/c/: CMakeLists.txt  test-c.c
apps/cpp/: CMakeLists.txt  test.cpp
apps/envelopes/: CMakeLists.txt  envelopes.cpp
apps/fortran/: CMakeLists.txt  test-f.f90
apps/profile_effective/: CMakeLists.txt  README.md  evaluate_main.cpp  input_parse.cpp  output.cpp  parse_main.cpp  parser.cpp  parser.hpp  shape_from_scatdb.cpp  shape_main.cpp
apps/refract/: CMakeLists.txt  README.md  main.cpp
apps/shape/: CMakeLists.txt  README.md  main.cpp
apps/units/: CMakeLists.txt  README.md  main.cpp
binaries/win64-msvc-1900-relwithdebinfo/lib/lib_x64_1900/: scatdb_RelWithDebInfo_x64_1900.lib
binaries/win64-msvc-1900-relwithdebinfo/share/scatdb/Modules/: scatdb
private/: MurmurHash3.h  chainHull.hpp  hash.hpp  hashForwards.hpp  info.hpp  info_fwd.hpp  options.hpp  os_functions_common.hpp  os_functions_freebsd.hpp  os_functions_linux.hpp  os_functions_win.hpp  refractBackend.hpp  shapeBackend.hpp  shapeIOtext.hpp  unitsBackend.hpp  versioning.hpp  versioningForwards.hpp  versioningGenerate.hpp
scatdb/: data.h  debug.hpp  defs.h  defs.hpp  error.hpp  errorTypes.hpp  export-hdf5.hpp  hash.hpp  hashForwards.hpp  logging.hpp  lowess.hpp  optionsForwards.hpp  scatdb.h  scatdb.hpp  scatdb_liu.h  splitSet.hpp  zeros.hpp
scatdb/refract/: refract.hpp  refractBase.hpp
scatdb/shape/: shape.hpp  shapeAlgs.hpp  shapeForwards.hpp  shapeIO.hpp
scatdb/units/: units.hpp  unitsPlugins.hpp
share/: scatdb.csv  scatdb.hdf5
share/examples/parser/: 1mm2shape2.hdf5  profiles-scatdb.hdf5  profiles-shapes.hdf5  radar_insitu_colocations.hdf5  radar_insitu_colocations.txt
src/: MurmurHash3.cpp  chainHull.cpp  debug.cpp  error.cpp  errorTypes.cpp  export-hdf5.cpp  filters.cpp  hash.cpp  io.cpp  io_hdf5.cpp  io_simple.cpp  logging.cpp  lowess.cpp  options.cpp  os_functions_common.cpp  os_functions_freebsd.cpp  os_functions_linux.cpp  os_functions_win.cpp  refract.cpp  refractImpl.cpp  refractStore.cpp  scatdb.cpp  scatdb_c.cpp  scatdb_liu.c  scatdb_liu_supplemental.cpp  scatdb_stats.cpp  shape.cpp  shapeAlgsProj.cpp  shapeIO.cpp  shapeIOhdfRead.cpp  shapeIOhdfWrite.cpp  shapeIOtext.cpp  shapeIOtextParsers.cpp  splitSet.cpp  units.cpp  unitsPlugins.cpp  unitsSimple.cpp  versioning.cpp  zeros.cpp
