option (BUILD_APPS "Build applications" ON)
IF (BUILD_APPS)
	option (BUILD_EXAMPLE_CPP "Build C++ app example" ON)
	option (BUILD_EXAMPLE_C "Build C app example" ON)
	option (BUILD_EXAMPLE_FORTRAN "Build Fortran app example" OFF)
	option (BUILD_ENVELOPES "Build envelopes app" ON)
	option (BUILD_PROFILE_EFFECTIVE "Build applications to determine effective reflectivity from specified profiles" ON)

	if (BUILD_EXAMPLE_CPP)
		add_subdirectory(cpp)
	endif()
	if (BUILD_EXAMPLE_C)
		add_subdirectory(c)
	ENDIF()
	if (BUILD_EXAMPLE_FORTRAN)
		enable_language (Fortran)
		add_subdirectory(fortran)
	endif()
	if (BUILD_ENVELOPES)
		add_subdirectory(envelopes)	
	ENDIF()
	if (BUILD_PROFILE_EFFECTIVE)
		add_subdirectory(profile_effective)
	endif()

endif(BUILD_APPS)

